PlzNavigate: make ctrl+click works.

Opening a link in a new tab/window was broken with PlzNavigate.

This CL solves the majority of broken tests. There is still 3
browser_tests that doesn't work properly yet, but it seems to me this
is unrelated to click modifiers (ctrl/shift/meta+click).

Timeout:
    ReferrerPolicyTest.HttpLeftClickRedirectToHTTPOriginWhenCrossOrigin

Flaky fail:
    ClickModifierTest.WindowOpenControlShiftClickTest
    ClickModifierTest.WindowOpenBasicClickTest

BUG=644116

R=clamy@chromium.org

Review-Url: https://codereview.chromium.org/2323153003
Cr-Commit-Position: refs/heads/master@{#418990}

Former-commit-id: a82b237354e75482b5857f11644877611896fa58